feat: Update pagination, use offset and total
